# pyproject-cli

./: pyproject.toml
pyproject/: __init__.py  helpers.py  scripts.py
pyproject/templates/: .flake8.template
