[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Demetrius Panovitch <demetrius.mp789@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
tomlkit = "^0.8.0"

[tool.poetry.scripts]
pyproject = "pyproject:pyproject"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
